# livraison

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.yaml  .syncpackrc.yaml  Cargo.toml  LICENSE  README.md  cspell.yaml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  test.sh  tsconfig.build.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  test-dist-packages.yml  test-installers.yml
crates/color/: Cargo.toml
crates/color/src/: color.rs  lib.rs
crates/livraison/: Cargo.toml
crates/livraison/examples/: msiinfo.rs
crates/livraison/src/: cli.rs  error.rs  lib.rs  main.rs
crates/livraison/src/actions/: mod.rs  pack.rs  script.rs
crates/livraison/src/common/: data_file.rs  file_ref.rs  livraison_file.rs  mod.rs
crates/livraison/src/deb/: builder.rs  control.rs  livraison_packer.rs  mod.rs  package.rs  tar.rs
crates/livraison/src/msi/: context.rs  debug.rs  dialogs.rs  livraison_packer.rs  mod.rs  packer.rs
crates/livraison/src/msi/dialogs/: cancel.rs  exit.rs  fatal_error.rs  mod.rs  progress.rs  remove.rs  welcome.rs
crates/livraison/src/msi/dialogs/classic/: cancel.rs  common.rs  exit.rs  fatal_error.rs  mod.rs  progress.rs  remove.rs  welcome.rs
crates/livraison/src/msi/dialogs/minimalist/: common.rs  exit.rs  fatal_error.rs  mod.rs  progress.rs  remove.rs  welcome.rs
crates/livraison/src/msi/features/: environment_vars.rs  mod.rs
crates/livraison/src/rpm/: constants.rs  cpio.rs  header.rs  lead.rs  livraison_packer.rs  metadata.rs  mod.rs  package.rs
crates/livraison/src/scripts/: doc.rs  mod.rs  powershell.rs  shell.rs
crates/livraison/src/scripts/snapshots/: livraison__scripts__powershell__tests__basic.snap  livraison__scripts__powershell__tests__basic.snap.ps1  livraison__scripts__shell__tests__basic.snap  livraison__scripts__shell__tests__basic.snap.sh
crates/livraison/src/utils/: compression.rs
crates/livraison/tests/: deb_test.rs  msi.rs  rpm_test.rs
crates/livraison/tests/test_utils/: mod.rs
crates/msi/: Cargo.toml  README.md
crates/msi/src/internal/: column.rs  expr.rs  macros.rs  package.rs  propset.rs  query.rs  streamname.rs  stringpool.rs  summary.rs  table.rs  value.rs
crates/msi/tests/: signature.rs
crates/msi/tests/testutil/: mod.rs
crates/msi_installer/: Cargo.toml
crates/msi_installer/src/: lib.rs  properties.rs
crates/msi_installer/src/tables/: binary.rs  component.rs  control.rs  control_event.rs  dialog.rs  directory.rs  environment.rs  error.rs  event_mapping.rs  feature_components.rs  file.rs  install_ui_sequence.rs  mod.rs  property.rs  registry.rs  table.rs  text_style.rs
crates/msi_installer/src/ui/: control.rs  dialog.rs  event.rs  mod.rs  position.rs  size.rs  text.rs  ui.rs
crates/msi_installer/src/ui/control/: bitmap.rs  builder.rs  button.rs  line.rs  mod.rs  progress_bar.rs  text.rs
crates/msiinfo/: Cargo.toml  README.md  control_event_new.txt  control_event_old.txt  controls_new.txt  controls_old.txt  dialog_new.txt  dialog_old.txt  snapshot-check.sh  test.sh
crates/msiinfo/snapshots/classic/: Control.txt  ControlEvent.txt  Dialog.txt  EventMapping.txt  InstallUISequence.txt
crates/msiinfo/snapshots/minimal/: Control.txt  ControlEvent.txt  Dialog.txt  EventMapping.txt  InstallUISequence.txt  TextStyle.txt
crates/msiinfo/src/: color.rs  lib.rs  main.rs
crates/msiinfo/src/info/: describe.rs  export.rs  mod.rs  print_table_contents.rs  style.rs
crates/msiinfo/src/installer/: control.rs  dialog.rs  error.rs  install_ui_sequence.rs  mod.rs  standard_actions.rs  table.rs
crates/msiinfo/src/validate/: dialog_map.rs  error.rs  mod.rs  rule.rs  validator.rs
crates/msiinfo/src/validate/rules/: control_event_ref.rs  dialog.rs  invalid_foreign_key.rs  invalid_property.rs  mod.rs  primary_key.rs
crates/printer/: Cargo.toml
crates/printer/src/: builder.rs  doc.rs  lib.rs
crates/test_macros/: Cargo.toml
crates/test_macros/src/: lib.rs
definitions/: index.d.ts
js/distribution/: package.json
js/installers/: install.ps1  install.sh  package.json  tsconfig.json
js/installers/test/: Dockerfile  Dockerfile.windows  docker-test.ts  get_shell_profile.sh  install-and-verify.ps1  install-and-verify.sh  verify-installed.ps1  verify-installed.sh
js/livraison-cli/: package.json
js/livraison-cli/src/: cli.ts
rust/: Cargo.toml
rust/src/: deb.rs  lib.rs  main.rs
rust/src/deb/: control.rs  deb_package.rs  mod.rs  package.rs  tar.rs
rust/tests/: deb_test.rs
src/: cli.js  cli.ts
src/archive/ar/: ar.test.ts  common.ts  read-ar.ts  write-ar.ts
src/archive/ar/_fixtures/simple/content/: a.txt  b.txt
src/cli/: cli.js  cli.ts  utils.ts
src/pack/: fpm.ts
src/pack/deb/: pack.test.ts  pack.ts  types.ts
src/pack/utils/: create-file-header.ts
src/reporters/: basic.ts  dynamic.ts  types.ts
src/sea/: create.test.ts  create.ts
src/utils/: constants.ts  exec-async.ts  figures.ts  fs-utils.ts  stream.ts
test/: smoke.test.ts  test-reporter.ts  test-utils.ts
test/fixtures/: simple-app.js
test/fixtures/deb/: test-exe
