[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
color = { path = "crates/color" }
msi = { path = "crates/msi", default-features = false }
msi_installer = { path = "crates/msi_installer" }
printer = { path = "crates/printer" }
test_macros = { path = "crates/test_macros" }

# External crates
ar = "0.9.0"
bitflags = "2.13.1"
byteorder = "1"
cab = "0.6.0"
cfb = "0.14"
clap = { version = "4.6.2", features = ["derive"] }
encoding_rs = "0.8"
flate2 = "1.1.9"
indoc = "2.0.7"
md-5 = "0.10.6"
sha2 = "0.10.9"
quick-error = "2.0.1"
quote = "1.0.47"
strum = "0.28"
strum_macros = "0.28"
syn = { version = "3.0.0", features = ["full"] }
tar = "0.4.46"
thiserror = "2.0.19"
time = "0.3.53"
uuid = "1.24.0"
which = "8.0.5"

# Dev dependencies
assertables = "10.1.0"
insta = "1.48.0"
pretty_assertions = "1.4.1"
