[package]
name = "livraison"
version = "0.1.0"
edition = "2024"

[lib]
name = "livraison"
path = "src/lib.rs"
doc = true

[[bin]]
name = "livraison"
path = "src/main.rs"
doc = false

[dependencies]
ar = "0.9.0"
cab = "0.6.0"
clap = { version = "4.5.32", features = ["derive"] }
msi  = { version = "0.8.0", path = "../msi", default-features = false }
msi_installer  = { version = "0.1.0", path = "../msi_installer" }

quick-error = "2.0.1"
rand = "0.9.0"
tar = "0.4.44"
time = "0.3.39"
uuid = { version= "1.16.0", features = [
    "v4", "v5"
]}
zopfli = "0.8.1"

[dev-dependencies]
assertables = "9.5.1"
indoc = "2.0.6"
pretty_assertions = "1.4.1"
test_macros  = { version = "0.1.0", path = "../test_macros", default-features = false }
