[package]
name = "livraison"
version.workspace = true
edition.workspace = true

[[bin]]
name = "livraison"
doc = false

[dependencies]
ar.workspace = true
cab.workspace = true
clap.workspace = true
color.workspace = true
flate2.workspace = true
indoc.workspace = true
md-5.workspace = true
msi.workspace = true
msi_installer.workspace = true
printer.workspace = true
quick-error.workspace = true
sha2.workspace = true
tar.workspace = true
uuid = { workspace = true, features = ["v4", "v5"] }

[dev-dependencies]
assertables.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
test_macros.workspace = true
