[package]
name = "msi"
version = "0.8.0"
edition.workspace = true
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Read/write Windows Installer (MSI) files"
repository = "https://github.com/mdsteele/rust-msi"
keywords = ["msi", "windows", "installer", "package"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder.workspace = true
cfb.workspace = true
encoding_rs.workspace = true
uuid.workspace = true
