[package]
name = "msi_installer"
version = "0.1.0"
edition = "2024"

[lib]
name = "msi_installer"
path = "src/lib.rs"
doc = true

[dependencies]
msi  = { version = "0.8.0", path = "../msi", default-features = false }
time = "0.3.39"
thiserror = "2.0.12"
bitflags = "2.9.0"
uuid = { version= "1.16.0", features = [
    "v4", "v5"
]}
strum = "0.27"
strum_macros = "0.27"
