[package]
name = "msi_installer"
version = "0.1.0"
edition = "2024"

[lib]
name = "msi_installer"
path = "src/lib.rs"
doc = true

[dependencies]
msi  = { version = "0.8.0", path = "../msi", default-features = false }
thiserror = "2.0.18"
bitflags = "2.10.0"
uuid = { version= "1.20.0", features = [
    "v4", "v5"
]}
strum = "0.27"
strum_macros = "0.27"
