[package]
name = "msiinfo"
version.workspace = true
edition.workspace = true

[dependencies]
cab.workspace = true
clap.workspace = true
color.workspace = true
msi.workspace = true
msi_installer.workspace = true
thiserror.workspace = true
time.workspace = true
uuid = { workspace = true, features = ["v4", "v5"] }
